--- a/vercel.json
+++ b/vercel.json
@@ -12,9 +12,5 @@
       "dest": "app.js"
     }
   ],
-  "env": {
-    "NODE_ENV": "production",
-    "DATABASE_URL": "@database_url",
-    "API_KEY": "@api_key"
-  }
+  "env": {}
 }
